force-app/main/default/objects/Bureau_History__c/Bureau_History__c.object-meta.xml
<CustomObject>
    <label>Bureau History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bureau History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bureau History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>