force-app/main/default/objects/Bureau_History__c/fields/Bureau_Enquiry_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Date_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bureau Enquiry Date 1</label>
    <type>Date</type>
</CustomField>