force-app/main/default/objects/Bureau_History__c/fields/Bureau_Enquiry_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Type_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bureau Enquiry Type 3</label>
    <type>TextArea</type>
</CustomField>