force-app/main/default/objects/Bureau_History__c/fields/Current_Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Interest rate</label>
    <type>TextArea</type>
</CustomField>