force-app/main/default/objects/Bureau_History__c/fields/Decile__c.field-meta.xml
<CustomField>
    <fullName>Decile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decile</label>
    <type>TextArea</type>
</CustomField>