force-app/main/default/objects/Bureau_History__c/fields/Difference_in_bucket__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_bucket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Difference in bucket</label>
    <type>TextArea</type>
</CustomField>