force-app/main/default/objects/Bureau_History__c/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LAN</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Bureau History</relationshipLabel>
    <relationshipName>Bureau_History</relationshipName>
    <type>Lookup</type>
</CustomField>