force-app/main/default/objects/Bureau_History__c/fields/LAN_Diff_with_floor_rate__c.field-meta.xml
<CustomField>
    <fullName>LAN_Diff_with_floor_rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAN_Diff with floor rate</label>
    <type>TextArea</type>
</CustomField>