force-app/main/default/objects/Bureau_History__c/fields/LAN_Text__c.field-meta.xml
<CustomField>
    <fullName>LAN_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAN Text</label>
    <type>TextArea</type>
</CustomField>