force-app/main/default/objects/Bureau_History__c/fields/Offer_discount__c.field-meta.xml
<CustomField>
    <fullName>Offer_discount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer discount</label>
    <type>TextArea</type>
</CustomField>