force-app/main/default/objects/Bureau_History__c/fields/Offer_for_FL_Agent__c.field-meta.xml
<CustomField>
    <fullName>Offer_for_FL_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer for FL Agent</label>
    <type>TextArea</type>
</CustomField>