force-app/main/default/objects/Bureau_History__c/fields/Offer_for_TL_Retention__c.field-meta.xml
<CustomField>
    <fullName>Offer_for_TL_Retention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer for TL Retention</label>
    <type>TextArea</type>
</CustomField>